--- a/frontend/src/assets/css/table.css
+++ b/frontend/src/assets/css/table.css
@@ -7,7 +7,7 @@
 }
 
 .table-flex-wrapper {
-    overflow-y: auto;
+    /* overflow-y: auto; */
     display: flex;
     flex-grow: 1;
     flex-direction: column;
